[package]
name = "warmth"
version = "0.2.0"
authors = ["june wilde <jewilde@rosegardencult.com>"]
description = "come close to the fire, stay warm"
license = "MPL-2.0"
keywords = ["warmth"]
homepage = "https://github.com/rosegardencult/warmth"
repository = "https://github.com/rosegardencult/warmth"
readme = "README.md"
edition = "2018"

[dependencies]
booties = "0.1.0"
earmuffs = "0.1.0"
fluff = "0.1.0"
parka = "0.1.0"
snowgoggles = "0.1.0"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]
